# Sgread

./: README.md
Sgread/: CMakeLists.txt
Sgread/Engine/: Core.cpp  Core.h  Entry.cpp
Sgread/Game/: Game.cpp  Game.h
